[tool.poetry]
name = "solana-actions-fastapi-example"
version = "0.1.0"
description = ""
authors = ["Fabian Schuh <mail@xeroc.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
solana-actions = "^0.2.0"
solana = "^0.34.2"
solders = "^0.21.0"
requests = "^2.32.3"
PyNaCl = "^1.5.0"
base58 = "^2.1.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
